--- a/src/data/changelog.yaml
+++ b/src/data/changelog.yaml
@@ -1,7 +1,7 @@
 ---
 - date: "2020-03-28"
   items:
-    - item: Update audited Forged In Battle weapons.
+    - item: Update audited Forged In Battle weapons and armor.
 - date: "2020-03-21"
   items:
     - item: Add Knights of Fate vehicles.
