--- a/src/data/changelog.yaml
+++ b/src/data/changelog.yaml
@@ -1,4 +1,7 @@
 ---
+- date: "2020-04-12"
+  items:
+    - item: Add new and update audited Edge of the Empire attachments, vehicle attachments, additional rules, and qualities.
 - date: "2020-03-28"
   items:
     - item: Update audited Forged In Battle weapons and armor.
