--- a/src/data/content-status.yaml
+++ b/src/data/content-status.yaml
@@ -1488,7 +1488,7 @@
   resource: Qualities
   source: Viluppo
   entered: Yes
-  audited: No
+  audited: Yes
 - book: Edge of the Empire Core Rulebook
   resource: Skills
   source: Viluppo
@@ -1523,7 +1523,7 @@
   resource: Attachments
   source: Viluppo
   entered: Yes
-  audited: No
+  audited: Yes
 - book: Edge of the Empire Core Rulebook
   resource: Weapons
   source: Viluppo
