--- a/src/data/changelog.yaml
+++ b/src/data/changelog.yaml
@@ -1,7 +1,7 @@
 ---
 - date: "2020-04-12"
   items:
-    - item: Add new Vehicle Weapons section.
+    - item: Add new vehicle weapons section.
     - item: Add AoR Core Rulebook vehicle weapons.
     - item: Add new and update audited Edge of the Empire attachments, vehicle attachments, additional rules, and qualities.
 - date: "2020-03-28"
