--- a/src/data/changelog.yaml
+++ b/src/data/changelog.yaml
@@ -1,4 +1,7 @@
 ---
+- date: "2020-04-13"
+  items:
+    - item: Add Stay on Target vehicle weapons.
 - date: "2020-04-12"
   items:
     - item: Add new vehicle weapons section.
