Add more vehicle weapons

--- a/src/data/vehicle-weapons.yaml
+++ b/src/data/vehicle-weapons.yaml
@@ -257,7 +257,7 @@
   qualities: Blast 4, Slow-Firing 1, Vicious 3
   compatible silhouettes: 4+
   notes:
-  index: 4df0ada2-7749-4c67-8cea-a04ddf36e115:49
+  index: 4df0ada2-7749-4c67-8cea-a04ddf36e115:49, f358e094-fb3f-46ca-a540-b76c474ac712:53, 04196a88-99d9-4018-83ef-ca37d68a4869:77
   generatedId: f20365d5-5d8d-4fac-8632-964a0465e703
 - category: Other
   name: Medium Flak Cannon
@@ -270,7 +270,7 @@
   qualities: Blast 4, Slow-Firing 1, Vicious 4
   compatible silhouettes: 5+
   notes:
-  index: 4df0ada2-7749-4c67-8cea-a04ddf36e115:49
+  index: 4df0ada2-7749-4c67-8cea-a04ddf36e115:49, f358e094-fb3f-46ca-a540-b76c474ac712:53, 04196a88-99d9-4018-83ef-ca37d68a4869:77
   generatedId: d6ba0838-b32b-4f38-9345-7eeac200662e
 - category: Other
   name: Heavy Flak Cannon
@@ -283,5 +283,5 @@
   qualities: Blast 5, Slow-Firing 2, Vicious 5
   compatible silhouettes: 6+
   notes:
-  index: 4df0ada2-7749-4c67-8cea-a04ddf36e115:49
+  index: 4df0ada2-7749-4c67-8cea-a04ddf36e115:49, f358e094-fb3f-46ca-a540-b76c474ac712:53, 04196a88-99d9-4018-83ef-ca37d68a4869:77
   generatedId: cb3a6f96-adff-40e7-a9a5-1a60314ebb76
