Add more vehicle weapons (#282)
* Add vehicle weapons

* Add more vehicle weapons

* Add RotS vehicle weapons

* Fix YAML elements

--- a/src/data/changelog.yaml
+++ b/src/data/changelog.yaml
@@ -1,4 +1,7 @@
 ---
+- date: "2020-04-13"
+  items:
+    - item: Add Stay on Target, Lead by Example, and Collapse of the Republic vehicle weapons.
 - date: "2020-04-12"
   items:
     - item: Add new vehicle weapons section.
