--- a/src/data/changelog.yaml
+++ b/src/data/changelog.yaml
@@ -1,4 +1,7 @@
 ---
+- date: "2020-04-14"
+  items:
+    - item: Add No Disintegrations weapons.
 - date: "2020-04-13"
   items:
     - item: Add Stay on Target, Lead by Example, and Collapse of the Republic vehicle weapons.
