--- a/src/data/talents.yaml
+++ b/src/data/talents.yaml
@@ -2651,7 +2651,7 @@
   forceSensitive: No
   index: f358e094-fb3f-46ca-a540-b76c474ac712:35
   generatedId: 76641206-6e22-4ae5-9fd7-30131f586107
-- name: The Force is my Ally
+- name: The Force is My Ally
   activation: Active (Incidental)
   ranked: No
   forceSensitive: Yes
